# recycler-ai

./: .clineignore  .cursorignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .taskrc.yml  README.md  Taskfile.md  Taskfile.yml  cursor-prompting-notest.md  db-analysis.md  db-proposal.md  docker-compose.yml  findings.md  jest.config.cjs  notest-temp.md  openrouter-proxy.js  output.md  package-lock.json  package.json  task_plan.md  tsconfig.json
aiproxy/: README.md  architecture.md  config.yaml  pyproject.toml  requirements.txt
aiproxy/aiproxy/: __init__.py  cli.py  config.py  hooks.py  langfuse_enricher.py  prompt_manager.py  tool_selector.py
app/: layout.tsx  page.tsx
architecture/: architecture.md  data-ownership-security.md  external-event-controller.md  external-system-integration.md  failure-mode-and-hitl.md  prompt-management.md  request-flow.md  tool-layer.md  ui-layer.md
config/: custom_hooks.py  litellm-config.yaml
db/: functions.sql  indexes.sql  logging-schema.sql  materialized_views.sql  migrate_parts.sql  migrate_parts_fixed.sql  migrate_real_market_data.sql  migrate_real_market_data_fixed.sql  migrate_sales_auctions.sql  migrate_taxonomy.sql  migrate_taxonomy_fixed.sql  migrate_users.sql  migrate_vehicles.sql  optimization_plan.sql  partial_indexes.sql  schema.sql  validate_migration.sql  validate_migration_fixed.sql  validate_user_stories.sql
docker/: docker-compose.langfuse.yml
docs/: AIProxy-Logging-Tracing.md  Agent-State.md  (+30 more)
docs-archive/: agent-state-central-contract.md  hybrid-prompt-router.md  litellm.md  observability-tracing.md
(+480 files in other folders)
