[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiproxy"
version = "0.1.0"
description = "Thin LiteLLM proxy wrapper for RecycleAI: dynamic tool/prompt selection, Langfuse OTEL enrichment, Postgres state"
authors = [{name = "RecycleAI Team", email = "dev@recycle-ai.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "litellm[proxy]",
  "psycopg2-binary",
  "langfuse",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pytest",
]

[project.scripts]
aiproxy = "aiproxy.cli:serve"

[project.urls]
Homepage = "https://github.com/cvillej/recycler-ai"
Repository = "https://github.com/cvillej/recycler-ai/tree/main/aiproxy"